# QvxVulkanEngine

./: CMakeLists.txt  LICENSE  README.md  compile.bat  first_app.cpp  first_app.h  main.cpp  qve_device.cpp  qve_device.h  qve_pipeline.cpp  qve_pipeline.h  qve_swap_chain.cpp  qve_swap_chain.h  qve_window.cpp  qve_window.h
shaders/: simple_shader.vert  simple_shaders.vert.spv
